added to the styling,fixed up the alignment of options for the answers, created separation between each element, made it more to my style

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,10 +3,20 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
+    font-size: 4rem;
 }
+
 .card {
-    margin-top: 200px;
-    margin-right: 100px;
-    font-size: 50px;
-    /* padding-left: 275px;*/
+    margin: 200px 100px 80px;
+}
+.card-header{
+    font-size:4rem;
+}
+
+.btn-info{
+    font-size: 4rem;
+}
+
+.card-text {
+    font-size: 2rem;
 }
